--- a/MA_3.Rmd
+++ b/MA_3.Rmd
@@ -401,28 +401,28 @@ We now implement a full-fledged portfolio backtesting strategy with transaction 
 
 
 ```{r excersise 3: Sandbox, echo=FALSE}
-
-periods <- n_months - window_length #Number of periods
-months<-sort(unique(crsp_monthly_reduced$month))
+#Calculates the number of periods for the rolling window (for-loop) below along with saving a vector of the unique months and stocks
+periods <- n_months - window_length 
+months <- sort(unique(crsp_monthly_reduced$month))
 stocks <- unique(crsp_monthly_reduced$permno)
 
-
-
-performance_values <- matrix(NA, 
-                             nrow = periods, 
-                             ncol = 3) # A matrix to collect all returns
+# A matrix to collect all returns (both raw and net returns) along with the turnover
+performance_values <- matrix(NA, nrow = periods, ncol = 3) 
 colnames(performance_values) <- c("raw_return", "turnover", "net_return") 
 
+# Creates a list to save the performance values for all three strategies
 performance_values <- list("Mean-variance with TC" = performance_values, 
                            "Naive" = performance_values, 
                            "Mean-variance with no short-selling" = performance_values)
 
+# Sets the initial portfolio to be the naive portfolio (equal weights)
 w_prev_1 <- w_prev_2 <- w_prev_3 <- rep(1 /nrow(stocks_traded), nrow(stocks_traded))
 
+############################################################
+### Functions to be used in th rolling window (for-loop) ###
+############################################################
 
-#######################################################################
-
-
+# Computes the covariance matrix by using the Ledoit shrinkage factor
 compute_ledoit_wolf <- function(x) {
   # Computes Ledoit-Wolf shrinkage covariance estimator
   # This function generates the Ledoit-Wolf covariance estimator  as proposed in Ledoit, Wolf 2004 (Honey, I shrunk the sample covariance matrix.)
@@ -467,15 +467,18 @@ compute_ledoit_wolf <- function(x) {
   return(sigma)
 }
 
+################################################################
+### End functions to be used in th rolling window (for-loop) ###
+################################################################
 
 
-# Define function to adjust weights after returns have been realized
+# This function adjusts the weights after returns have been realized
 adjust_weights <- function(w, next_return){
   w_prev <- w *(1+ next_return)
   as.numeric(w_prev / sum(as.vector(w_prev)))
 }
 
-# Define function to evaluate performance before and after transaction cost
+# This function evaluates the performance before and after transaction cost
 evaluate_performance <- function(w, w_previous, next_return, lambda){
   raw_return <- as.numeric(t(as.matrix(next_return)) %*% w)
   turnover <- sum(abs(w - w_previous))
@@ -483,7 +486,7 @@ evaluate_performance <- function(w, w_previous, next_return, lambda){
   c(raw_return, turnover, net_return)
 }
 
-# Define function to determine no short sell optimal portfolio
+# This function determines the no short selling optimal portfolio
  No_short_sale_weight <- function(mu, Sigma, gamma = gamma_default){
    N <- ncol(Sigma)
    A <- diag(N)
@@ -495,11 +498,13 @@ evaluate_performance <- function(w, w_previous, next_return, lambda){
    return(as.numeric(out$solution))
  }
 
-
+# This is the rolling window for the backtesting strategy
 for(i in 1:periods){
   
+  # Selects the data for the specific period
   returns_window <- crsp_monthly_reduced %>% filter(month >= months[i]) %>% filter(month < months[i+window_length])
   
+  # Selects the out-of-sample next period return
   next_return <- (crsp_monthly_reduced %>% filter(month == months[i+window_length]) %>% select(ret_excess))$ret_excess
   
   # Computes sample mean excess return
@@ -551,10 +556,11 @@ for(i in 1:periods){
 #######################################################################
 
 
-
+# Combines the lists to the same data table
 performance <- lapply(performance_values, as_tibble) %>% 
   bind_rows(.id = "strategy")
 
+# Shows the summary statistics for the different strategies
 performance %>%
   group_by(strategy) %>% summarise(across(c(raw_return, turnover, net_return), list(mean = mean, sd = sd))) %>%
   knitr::kable(booktabs = T, digits = 4, col.names = c("strategy", "mean", "sd", "mean", "sd", "mean", "sd"), caption = "MISSING") %>% 
